infra/nacl.json
[
    {
        "ID": "acl-09674cd39f7ebb48e",
        "Entries": [
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 100
            },
            {
                "Egress": true,
                "Ipv6CidrBlock": "::/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 101
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "deny",
                "RuleNumber": 32767
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 100
            },
            {
                "Egress": false,
                "Ipv6CidrBlock": "::/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 101
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "Protocol": "-1",
                "RuleAction": "deny",
                "RuleNumber": 32767
            }
        ],
        "Associations": [
            {
                "NetworkAclAssociationId": "aclassoc-021645faed46599ab",
                "NetworkAclId": "acl-09674cd39f7ebb48e",
                "SubnetId": "subnet-00659a1e51230a5f2"
            },
            {
                "NetworkAclAssociationId": "aclassoc-091a839679531449a",
                "NetworkAclId": "acl-09674cd39f7ebb48e",
                "SubnetId": "subnet-076797610a33657a4"
            },
            {
                "NetworkAclAssociationId": "aclassoc-02476331caaa63abe",
                "NetworkAclId": "acl-09674cd39f7ebb48e",
                "SubnetId": "subnet-0a9e9d408ccfc1df3"
            },
            {
                "NetworkAclAssociationId": "aclassoc-0d7f7bb797f251480",
                "NetworkAclId": "acl-09674cd39f7ebb48e",
                "SubnetId": "subnet-0867a26e79e3f1c0f"
            }
        ]
    },
    {
        "ID": "acl-0ed6c6392123e23e0",
        "Entries": [
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 100
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "deny",
                "RuleNumber": 32767
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": 100
            },
            {
                "CidrBlock": "0.0.0.0/0",
                "Egress": false,
                "Protocol": "-1",
                "RuleAction": "deny",
                "RuleNumber": 32767
            }
        ],
        "Associations": [
            {
                "NetworkAclAssociationId": "aclassoc-04bd899cc8dea6f55",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-0110b48e5ce6e46bb"
            },
            {
                "NetworkAclAssociationId": "aclassoc-0758df5e42a9348cb",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-0ae949faf7fecc366"
            },
            {
                "NetworkAclAssociationId": "aclassoc-00dca85bf7692e805",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-00ce0f96eee182409"
            },
            {
                "NetworkAclAssociationId": "aclassoc-019cebe1b18bbdfc8",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-0f7889d5d9bc62038"
            },
            {
                "NetworkAclAssociationId": "aclassoc-0ad7770fcec10c615",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-045a49cf7f8154197"
            },
            {
                "NetworkAclAssociationId": "aclassoc-0c133344241a286ff",
                "NetworkAclId": "acl-0ed6c6392123e23e0",
                "SubnetId": "subnet-007750e7023b5226d"
            }
        ]
    }
]
